--- a/source/package.json
+++ b/source/package.json
@@ -20,6 +20,8 @@
     "path": "^0.12.7",
     "sass": "^1.62.0",
     "vite": "^4.2.0",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-sort-media-queries": "^5.2.0",
     "vite-plugin-html-purgecss": "^0.1.1",
     "vite-plugin-purgecss": "^0.2.12",
     "vite-plugin-restart": "^0.3.1",
