--- a/source/package.json
+++ b/source/package.json
@@ -9,9 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/alpinejs": "^3.13.2",
-    "@types/alpinejs__mask": "^3.13.1",
-    "@types/animejs": "^3.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^18.16.0",
     "browser-sync": "^3.0.2",
@@ -29,9 +26,8 @@
   },
   "dependencies": {
     "@alpinejs/mask": "^3.13.1",
-    "alpinejs": "^3.13.1",
-    "animejs": "^3.2.1",
     "array-move": "^4.0.0",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "inquirer": "^9.2.22"
   }
 }
