--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "htmlburger/carbon-fields": "^3"
+    },
+    "autoload": {
+        "psr-4": {
+            "DevTools\\": "DevTools/"
+        }
     }
 }
